Converted downloading notebook to use new column names

--- a/examples/download_pv_timeseries.ipynb
+++ b/examples/download_pv_timeseries.ipynb
@@ -1438,7 +1438,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing dates found so far: 16580\n",
+      "Number of duplicate missing dates: 33\n",
+      " system_id 6608: 22 of 829 (3%)  "
+     ]
+    }
+   ],
    "source": [
     "logger.info('\\n******* STARTING UP ************')\n",
     "\n",
@@ -1502,9 +1512,9 @@
     "                append_missing_date(date_to_load, datetime_of_api_request, system_id)\n",
     "            else:\n",
     "                index = timeseries.index\n",
-    "                inst_power = timeseries['power_generation_W']\n",
+    "                inst_power = timeseries['instantaneous_power_gen_W']\n",
     "                logger.info(\n",
-    "                    \"system_id %d: %d rows retrieved: %s to %s; power_gen_W min: %.0f; max: %.0f; mean: %.0f\", \n",
+    "                    \"system_id %d: %d rows retrieved: %s to %s; inst_pwr_gen_W min: %.0f; max: %.0f; mean: %.0f\", \n",
     "                    system_id, len(timeseries), \n",
     "                    index[0], index[-1],\n",
     "                    inst_power.min(), inst_power.max(), inst_power.mean())\n",
@@ -1558,7 +1568,7 @@
     "        try:\n",
     "            series = store.select(\n",
     "                key=hdf_key(system_id), \n",
-    "                columns=['datetime', 'power_generation_normalised'],\n",
+    "                columns=['datetime', 'power_gen_normalised'],\n",
     "                where=\"index >= 20190809\").squeeze()\n",
     "        except KeyError:\n",
     "            pass\n",
@@ -1684,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,24 +1703,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "pv_system_id\n",
-       "1647   2019-08-05 00:00:00+00:00\n",
-       "1647   2019-08-05 00:00:00+00:00\n",
-       "1647   2019-08-05 00:00:00+00:00\n",
-       "1647   2019-08-05 00:00:00+00:00\n",
-       "1647   2019-08-05 00:00:00+00:00\n",
-       "Name: datetime_of_API_request_UTC, dtype: datetime64[ns, UTC]"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'all_missing_dates' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-67199bc99ef6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mall_missing_dates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'datetime_of_API_request'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'all_missing_dates' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1719,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1737,12 +1742,12 @@
    ],
    "source": [
     "timeseries = get_data_from_hdf(hdf_key(system_id))\n",
-    "timeseries['power_generation_W'].plot(figsize=(17, 5), linewidth=0.5);"
+    "timeseries['instantaneous_power_gen_W'].plot(figsize=(17, 5), linewidth=0.5);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1751,18 +1756,18 @@
        "55"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "timeseries['power_generation_W'].isnull().sum()"
+    "timeseries['instantaneous_power_gen_W'].isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1776,7 @@
        "0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1806,11 +1811,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>energy_generation_Wh</th>\n",
+       "      <th>cumulative_energy_gen_Wh</th>\n",
        "      <th>energy_efficiency_kWh_per_kW</th>\n",
-       "      <th>power_generation_W</th>\n",
-       "      <th>average_power_W</th>\n",
-       "      <th>power_generation_normalised</th>\n",
+       "      <th>instantaneous_power_gen_W</th>\n",
+       "      <th>average_power_gen_W</th>\n",
+       "      <th>power_gen_normalised</th>\n",
        "      <th>energy_consumption_Wh</th>\n",
        "      <th>power_demand_W</th>\n",
        "      <th>temperature_C</th>\n",
@@ -1909,29 +1914,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                     energy_generation_Wh  energy_efficiency_kWh_per_kW  \\\n",
-       "datetime                                                                  \n",
-       "2018-12-05 00:05:00                   0.0                           0.0   \n",
-       "2018-12-05 00:10:00                   0.0                           0.0   \n",
-       "2018-12-05 00:15:00                   0.0                           0.0   \n",
-       "2018-12-05 00:20:00                   0.0                           0.0   \n",
-       "2018-12-05 00:25:00                   0.0                           0.0   \n",
+       "                     cumulative_energy_gen_Wh  energy_efficiency_kWh_per_kW  \\\n",
+       "datetime                                                                      \n",
+       "2018-12-05 00:05:00                       0.0                           0.0   \n",
+       "2018-12-05 00:10:00                       0.0                           0.0   \n",
+       "2018-12-05 00:15:00                       0.0                           0.0   \n",
+       "2018-12-05 00:20:00                       0.0                           0.0   \n",
+       "2018-12-05 00:25:00                       0.0                           0.0   \n",
        "\n",
-       "                     power_generation_W  average_power_W  \\\n",
-       "datetime                                                   \n",
-       "2018-12-05 00:05:00                 0.0              NaN   \n",
-       "2018-12-05 00:10:00                 0.0              0.0   \n",
-       "2018-12-05 00:15:00                 0.0              0.0   \n",
-       "2018-12-05 00:20:00                 0.0              0.0   \n",
-       "2018-12-05 00:25:00                 0.0              0.0   \n",
+       "                     instantaneous_power_gen_W  average_power_gen_W  \\\n",
+       "datetime                                                              \n",
+       "2018-12-05 00:05:00                        0.0                  NaN   \n",
+       "2018-12-05 00:10:00                        0.0                  0.0   \n",
+       "2018-12-05 00:15:00                        0.0                  0.0   \n",
+       "2018-12-05 00:20:00                        0.0                  0.0   \n",
+       "2018-12-05 00:25:00                        0.0                  0.0   \n",
        "\n",
-       "                     power_generation_normalised  energy_consumption_Wh  \\\n",
-       "datetime                                                                  \n",
-       "2018-12-05 00:05:00                          NaN                    NaN   \n",
-       "2018-12-05 00:10:00                          0.0                    NaN   \n",
-       "2018-12-05 00:15:00                          0.0                    NaN   \n",
-       "2018-12-05 00:20:00                          0.0                    NaN   \n",
-       "2018-12-05 00:25:00                          0.0                    NaN   \n",
+       "                     power_gen_normalised  energy_consumption_Wh  \\\n",
+       "datetime                                                           \n",
+       "2018-12-05 00:05:00                   NaN                    NaN   \n",
+       "2018-12-05 00:10:00                   0.0                    NaN   \n",
+       "2018-12-05 00:15:00                   0.0                    NaN   \n",
+       "2018-12-05 00:20:00                   0.0                    NaN   \n",
+       "2018-12-05 00:25:00                   0.0                    NaN   \n",
        "\n",
        "                     power_demand_W  temperature_C  voltage  \\\n",
        "datetime                                                      \n",
@@ -1950,7 +1955,7 @@
        "2018-12-05 00:25:00                     NaT        NaT  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,39 +1966,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array Tilt                                       11.0°\n",
-       "Inverter                                  Enphase M215\n",
-       "Location                           United Kingdom CV47\n",
-       "Orientation                                 South 0.0°\n",
-       "Panels                     336x250W Q Cells Pro-G3 250\n",
-       "Shade                                              Low\n",
-       "system_name                                    mfl_phc\n",
-       "Outputs                             1813 days 00:00:00\n",
-       "Generation                                  399.238MWh\n",
-       "Average                                     220.208kWh\n",
-       "Efficiency                                 2.654kWh/kW\n",
-       "system_capacity_kw                                  84\n",
-       "efficiency_kWh_per_kW                            2.654\n",
-       "system_1_tilt_degrees                               11\n",
-       "system_2_tilt_degrees                              NaN\n",
-       "system_capacity_kW                                  84\n",
-       "status_interval_minutes                              5\n",
-       "install_date                       2014-01-17 00:00:00\n",
-       "latitude                                         52.23\n",
-       "longitude                                        -1.38\n",
-       "actual_date_from                   2014-01-08 00:00:00\n",
-       "actual_date_to                     2019-07-23 00:00:00\n",
-       "outputs                                           1815\n",
-       "Name: 26965, dtype: object"
+       "Array Tilt                                    30.0°\n",
+       "Inverter                                 SMA 4000TL\n",
+       "Location                         United Kingdom NG9\n",
+       "Orientation                              East 90.0°\n",
+       "Panels                     20x190W Schuco 190 MS 05\n",
+       "Shade                                            No\n",
+       "system_name                            The Bowler's\n",
+       "Outputs                          2894 days 00:00:00\n",
+       "Generation                                32.299MWh\n",
+       "Average                                   11.161kWh\n",
+       "Efficiency                              3.086kWh/kW\n",
+       "system_capacity_kw                              3.8\n",
+       "efficiency_kWh_per_kW                         3.086\n",
+       "system_1_tilt_degrees                            30\n",
+       "system_2_tilt_degrees                           NaN\n",
+       "system_capacity_kW                              3.8\n",
+       "status_interval_minutes                          10\n",
+       "install_date                    2011-08-12 00:00:00\n",
+       "latitude                                    52.9485\n",
+       "longitude                                  -1.27798\n",
+       "actual_date_from                2011-08-12 00:00:00\n",
+       "actual_date_to                  2019-07-23 00:00:00\n",
+       "outputs                                        2897\n",
+       "Name: 2998, dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,14 +2016,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " /missing_dates 750 of 750   "
+      " /timeseries/9860 750 of 750    "
      ]
     }
    ],
@@ -2036,33 +2041,33 @@
     "    print('\\r', key, i+1, 'of', n, end='   ', flush=True)\n",
     "    data = store.get(key)\n",
     "#     data['datetime_of_API_request'] = pd.DatetimeIndex(data['datetime_of_API_request'].values, tz='utc')\n",
-    "#     data.rename(\n",
-    "#         {\n",
-    "#             'datetime_of_API_request_UTC': 'datetime_of_API_request',\n",
-    "#             'energy_generation_watt_hours': 'energy_generation_Wh',\n",
-    "#             'inst_power_watt': 'power_generation_W',\n",
-    "#             'average_power_watt': 'average_power_W',\n",
-    "#             'normalised_output': 'power_generation_normalised',\n",
-    "#             'energy_consumption_watt_hours': 'energy_consumption_Wh',\n",
-    "#             'power_consumption_watts': 'power_demand_W',\n",
-    "#             'temperature_celsius': 'temperature_C'\n",
-    "#         }, \n",
-    "#         axis='columns', \n",
-    "#         inplace=True)\n",
+    "    data.rename(\n",
+    "        {\n",
+    "            'energy_generation_Wh': 'cumulative_energy_gen_Wh',\n",
+    "            'power_generation_W' : 'instantaneous_power_gen_W',\n",
+    "            'average_power_W': 'average_power_gen_W',\n",
+    "            'power_generation_normalised': 'power_gen_normalised',\n",
+    "        }, \n",
+    "        axis='columns', \n",
+    "        inplace=True)\n",
     "    \n",
-    "    if key == '/missing_dates':\n",
-    "        key2 = key\n",
-    "    else:\n",
-    "        key2 = hdf_key(int(key.replace('/', '')))\n",
+    "    if key != '/missing_dates':\n",
     "        data = data.sort_index()\n",
     "        data = data.loc[~data.index.duplicated()]\n",
     "    with warnings.catch_warnings():\n",
     "        warnings.simplefilter('ignore', tables.NaturalNameWarning) \n",
-    "        store2.put(key=key2, value=data, format='table')\n",
+    "        store2.put(key=key, value=data, format='table')\n",
     "        \n",
     "store.close()\n",
     "store2.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
