adding comment about historical queries

--- a/examples/download_pv_timeseries.ipynb
+++ b/examples/download_pv_timeseries.ipynb
@@ -1445,7 +1445,8 @@
      "text": [
       "Number of missing dates found so far: 16580\n",
       "Number of duplicate missing dates: 33\n",
-      " system_id 6608: 22 of 829 (3%)  "
+      " system_id 51021: 166 of 829 (20%) Waiting 897 seconds.  Will retry at 2019-08-12 16:03:00+00:00\n",
+      " system_id 58848: 168 of 829 (20%) Waiting 3374 seconds.  Will retry at 2019-08-12 17:03:00+00:00\n"
      ]
     }
    ],
