remove pytypes because it does not support Python 3.7 yet: https://github.com/Stewori/pytypes/issues/40

--- a/examples/animate_PV_yield_map.ipynb
+++ b/examples/animate_PV_yield_map.ipynb
@@ -17005,6 +17005,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('UK_PV_map.html', 'w') as fh:\n",
+    "    fh.write(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "659"
+      ]
+     },
+     "execution_count": 411,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lat_lon)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
