--- a/examples/download_pv_timeseries.ipynb
+++ b/examples/download_pv_timeseries.ipynb
@@ -1429,17 +1429,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of missing dates found so far: 19900\n",
+      "Number of missing dates found so far: 20775\n",
       "Number of duplicate missing dates: 33\n",
-      " system_id 59125: 643 of 829 (78%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-16 17:00:00+00:00\n",
-      "Waiting 3553 seconds.  Will retry at 2019-08-16 17:03:00+00:00\n"
+      " system_id 50963: 725 of 829 (87%) system_id 37389: 616 of 829 (74%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-17 18:00:00+00:00\n",
+      "Waiting 1187 seconds.  Will retry at 2019-08-17 18:03:00+00:00\n",
+      " system_id 20730: 728 of 829 (88%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-17 19:00:00+00:00\n",
+      "Waiting 3389 seconds.  Will retry at 2019-08-17 19:03:00+00:00\n",
+      " system_id 33993: 733 of 829 (88%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-17 20:00:00+00:00\n",
+      "Waiting 3397 seconds.  Will retry at 2019-08-17 20:03:00+00:00\n",
+      " system_id 27768: 734 of 829 (89%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-17 21:00:00+00:00\n",
+      "Waiting 3390 seconds.  Will retry at 2019-08-17 21:03:00+00:00\n",
+      " system_id 38950: 736 of 829 (89%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-17 22:00:00+00:00\n",
+      "Waiting 3384 seconds.  Will retry at 2019-08-17 22:03:00+00:00\n",
+      " system_id 46959: 737 of 829 (89%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-17 23:00:00+00:00\n",
+      "Waiting 3397 seconds.  Will retry at 2019-08-17 23:03:00+00:00\n",
+      " system_id 43586: 739 of 829 (89%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 00:00:00+00:00\n",
+      "Waiting 3383 seconds.  Will retry at 2019-08-18 00:03:00+00:00\n",
+      " system_id 44673: 743 of 829 (90%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 01:00:00+00:00\n",
+      "Waiting 3388 seconds.  Will retry at 2019-08-18 01:03:00+00:00\n",
+      " system_id 24464: 744 of 829 (90%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 02:00:00+00:00\n",
+      "Waiting 3396 seconds.  Will retry at 2019-08-18 02:03:00+00:00\n",
+      " system_id 1974: 746 of 829 (90%)  PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 03:00:00+00:00\n",
+      "Waiting 3387 seconds.  Will retry at 2019-08-18 03:03:00+00:00\n",
+      " system_id 59012: 752 of 829 (91%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 04:00:00+00:00\n",
+      "Waiting 3384 seconds.  Will retry at 2019-08-18 04:03:00+00:00\n",
+      " system_id 27003: 755 of 829 (91%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 05:00:00+00:00\n",
+      "Waiting 3389 seconds.  Will retry at 2019-08-18 05:03:00+00:00\n",
+      " system_id 19018: 757 of 829 (91%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 06:00:00+00:00\n",
+      "Waiting 3377 seconds.  Will retry at 2019-08-18 06:03:00+00:00\n",
+      " system_id 34165: 760 of 829 (92%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 07:00:00+00:00\n",
+      "Waiting 3392 seconds.  Will retry at 2019-08-18 07:03:00+00:00\n",
+      " system_id 44135: 761 of 829 (92%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 08:00:00+00:00\n",
+      "Waiting 3392 seconds.  Will retry at 2019-08-18 08:03:00+00:00\n",
+      " system_id 59128: 767 of 829 (93%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 09:00:00+00:00\n",
+      "Waiting 3377 seconds.  Will retry at 2019-08-18 09:03:00+00:00\n",
+      " system_id 37600: 769 of 829 (93%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 10:00:00+00:00\n",
+      "Waiting 3390 seconds.  Will retry at 2019-08-18 10:03:00+00:00\n",
+      " system_id 13216: 770 of 829 (93%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 11:00:00+00:00\n",
+      "Waiting 3395 seconds.  Will retry at 2019-08-18 11:03:00+00:00\n",
+      " system_id 42056: 773 of 829 (93%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 12:00:00+00:00\n",
+      "Waiting 3393 seconds.  Will retry at 2019-08-18 12:03:00+00:00\n",
+      " system_id 27649: 776 of 829 (94%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 13:00:00+00:00\n",
+      "Waiting 3393 seconds.  Will retry at 2019-08-18 13:03:00+00:00\n",
+      " system_id 29021: 777 of 829 (94%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 14:00:00+00:00\n",
+      "Waiting 3387 seconds.  Will retry at 2019-08-18 14:03:00+00:00\n",
+      " system_id 37032: 779 of 829 (94%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 15:00:00+00:00\n",
+      "Waiting 3379 seconds.  Will retry at 2019-08-18 15:03:00+00:00\n",
+      " system_id 54627: 781 of 829 (94%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 16:00:00+00:00\n",
+      "Waiting 3391 seconds.  Will retry at 2019-08-18 16:03:00+00:00\n",
+      " system_id 18205: 783 of 829 (94%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 17:00:00+00:00\n",
+      "Waiting 3393 seconds.  Will retry at 2019-08-18 17:03:00+00:00\n",
+      " system_id 67969: 785 of 829 (95%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 18:00:00+00:00\n",
+      "Waiting 3385 seconds.  Will retry at 2019-08-18 18:03:00+00:00\n",
+      " system_id 36482: 786 of 829 (95%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 19:00:00+00:00\n",
+      "Waiting 3398 seconds.  Will retry at 2019-08-18 19:03:00+00:00\n",
+      " system_id 5144: 788 of 829 (95%)  PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 20:00:00+00:00\n",
+      "Waiting 3394 seconds.  Will retry at 2019-08-18 20:03:00+00:00\n",
+      " system_id 36386: 790 of 829 (95%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 21:00:00+00:00\n",
+      "Waiting 3381 seconds.  Will retry at 2019-08-18 21:03:00+00:00\n",
+      " system_id 56984: 791 of 829 (95%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 22:00:00+00:00\n",
+      "Waiting 3388 seconds.  Will retry at 2019-08-18 22:03:00+00:00\n",
+      " system_id 5036: 793 of 829 (96%)  PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-18 23:00:00+00:00\n",
+      "Waiting 3403 seconds.  Will retry at 2019-08-18 23:03:00+00:00\n",
+      " system_id 40193: 795 of 829 (96%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 00:00:00+00:00\n",
+      "Waiting 3401 seconds.  Will retry at 2019-08-19 00:03:00+00:00\n",
+      " system_id 41025: 796 of 829 (96%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 01:00:00+00:00\n",
+      "Waiting 3398 seconds.  Will retry at 2019-08-19 01:03:00+00:00\n",
+      " system_id 35931: 798 of 829 (96%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 02:00:00+00:00\n",
+      "Waiting 3395 seconds.  Will retry at 2019-08-19 02:03:00+00:00\n",
+      " system_id 19334: 800 of 829 (97%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 03:00:00+00:00\n",
+      "Waiting 3380 seconds.  Will retry at 2019-08-19 03:03:00+00:00\n",
+      " system_id 34921: 801 of 829 (97%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 04:00:00+00:00\n",
+      "Waiting 3393 seconds.  Will retry at 2019-08-19 04:03:00+00:00\n",
+      " system_id 3576: 803 of 829 (97%)  PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 05:00:00+00:00\n",
+      "Waiting 3400 seconds.  Will retry at 2019-08-19 05:03:00+00:00\n",
+      " system_id 18155: 805 of 829 (97%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 06:00:00+00:00\n",
+      "Waiting 3399 seconds.  Will retry at 2019-08-19 06:03:00+00:00\n",
+      " system_id 38254: 806 of 829 (97%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 07:00:00+00:00\n",
+      "Waiting 3383 seconds.  Will retry at 2019-08-19 07:03:00+00:00\n",
+      " system_id 47944: 808 of 829 (97%) PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-19 08:00:00+00:00\n",
+      "Waiting 3372 seconds.  Will retry at 2019-08-19 08:03:00+00:00\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRateLimitExceeded\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36m_api_query\u001b[0;34m(self, service, api_params, wait_if_rate_limit_exceeded)\u001b[0m\n\u001b[1;32m    444\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 445\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_process_api_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    446\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mRateLimitExceeded\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36m_process_api_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    403\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m403\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrate_limit_remaining\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 404\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRateLimitExceeded\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    405\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRateLimitExceeded\u001b[0m: Status code: 403; Response content: b'Forbidden 403: Exceeded 300 requests per hour'; Response headers: {'Date': 'Mon, 19 Aug 2019 07:06:47 GMT', 'Set-Cookie': 'JSESSIONID=1aixph9ol85vskcmwznjmsnse;Path=/', 'Expires': 'Thu, 01 Jan 1970 00:00:00 GMT', 'X-Rate-Limit-Remaining': '-1', 'X-Rate-Limit-Limit': '300', 'X-Rate-Limit-Reset': '1566201600', 'Content-Type': 'text/plain;charset=ISO-8859-1', 'Connection': 'close', 'Server': 'Jetty(7.6.17.v20150415)', 'Strict-Transport-Security': 'max-age=15768000'}; ",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-45c057cec510>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     56\u001b[0m             \u001b[0mdate_to_load_str\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdate_to_pvoutput_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_to_load\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m             \u001b[0mdatetime_of_api_request\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTimestamp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutcnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m             \u001b[0mtimeseries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msystem_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate_to_load_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwait_if_rate_limit_exceeded\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m                 \u001b[0mappend_missing_date\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_to_load\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime_of_api_request\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msystem_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36mget_status\u001b[0;34m(self, pv_system_id, date, **kwargs)\u001b[0m\n\u001b[1;32m    169\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    170\u001b[0m             pv_system_status_text = self._api_query(\n\u001b[0;32m--> 171\u001b[0;31m                 service='getstatus', api_params=api_params, **kwargs)\n\u001b[0m\u001b[1;32m    172\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mNoStatusFound\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m             _LOG.info(\n",
+      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36m_api_query\u001b[0;34m(self, service, api_params, wait_if_rate_limit_exceeded)\u001b[0m\n\u001b[1;32m    452\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    453\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mwait_if_rate_limit_exceeded\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 454\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_for_rate_limit_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    455\u001b[0m                 return self._api_query(\n\u001b[1;32m    456\u001b[0m                     service, api_params, wait_if_rate_limit_exceeded=False)\n",
+      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36mwait_for_rate_limit_reset\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    468\u001b[0m         \u001b[0m_LOG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    469\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 470\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msecs_to_wait\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    471\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    472\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
