Fixing some bugs handling empty stats

--- a/examples/download_pv_timeseries.ipynb
+++ b/examples/download_pv_timeseries.ipynb
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,16 +1157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = pv.get_statistic(68800, date_to=END_DATE)"
+    "stats = pv._get_statistic_with_cache(OUTPUT_TIMESERIES_FILENAME, 68800, date_to=END_DATE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1215,10 +1215,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>1900-01-01</td>\n",
        "      <td>2019-07-01</td>\n",
        "    </tr>\n",
@@ -1227,23 +1227,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      total_energy_gen_Wh energy_exported_Wh average_daily_energy_gen_Wh  \\\n",
-       "68800                 NaN                NaN                         NaN   \n",
+       "       total_energy_gen_Wh  energy_exported_Wh  average_daily_energy_gen_Wh  \\\n",
+       "68800                  NaN                 NaN                          NaN   \n",
        "\n",
-       "      minimum_daily_energy_gen_Wh maximum_daily_energy_gen_Wh  \\\n",
-       "68800                         NaN                         NaN   \n",
+       "       minimum_daily_energy_gen_Wh  maximum_daily_energy_gen_Wh  \\\n",
+       "68800                          NaN                          NaN   \n",
        "\n",
-       "      average_efficiency_kWh_per_kW num_outputs actual_date_from  \\\n",
-       "68800                           NaN         NaN              NaN   \n",
+       "       average_efficiency_kWh_per_kW  num_outputs actual_date_from  \\\n",
+       "68800                            NaN          NaN              NaT   \n",
        "\n",
-       "      actual_date_to record_efficiency_kWh_per_kW record_efficiency_date  \\\n",
-       "68800            NaN                          NaN                    NaN   \n",
+       "      actual_date_to  record_efficiency_kWh_per_kW record_efficiency_date  \\\n",
+       "68800            NaT                           NaN                    NaT   \n",
        "\n",
        "      query_date_from query_date_to  \n",
        "68800      1900-01-01    2019-07-01  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,51 +1254,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66991    1496.0\n",
-       "Name: num_outputs, dtype: float32"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats['num_outputs']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66991    1.000669\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats['num_outputs'] / (stats['actual_date_to'] - stats['actual_date_from']).astype('timedelta64[D]')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting fresh statistic for 4158\n",
+      "Getting fresh statistic for 21189\n",
+      "Getting fresh statistic for 59150\n",
+      "Getting fresh statistic for 66313\n",
+      "Getting fresh statistic for 14841\n",
+      "Getting fresh statistic for 16558\n",
+      "Getting fresh statistic for 55993\n",
+      "Getting fresh statistic for 40707\n",
+      "Getting fresh statistic for 4574\n",
+      "Getting fresh statistic for 58512\n",
+      "Getting fresh statistic for 64924\n",
+      "Getting fresh statistic for 66406\n",
+      "Getting fresh statistic for 56375\n",
+      "Getting fresh statistic for 67689\n",
+      "Getting fresh statistic for 11515\n",
+      "Getting fresh statistic for 11516\n",
+      "Getting fresh statistic for 24208\n",
+      "Getting fresh statistic for 26147\n",
+      "Getting fresh statistic for 58518\n",
+      "Getting fresh statistic for 41873\n",
+      "Getting fresh statistic for 58517\n",
+      "Getting fresh statistic for 63946\n",
+      "Getting fresh statistic for 50850\n",
+      "Getting fresh statistic for 62751\n",
+      "Getting fresh statistic for 61190\n",
+      "Getting fresh statistic for 42763\n",
+      "Getting fresh statistic for 18225\n",
+      "Getting fresh statistic for 68404\n",
+      "Getting fresh statistic for 50849\n",
+      "Getting fresh statistic for 57010\n",
+      "Getting fresh statistic for 58519\n",
+      "Getting fresh statistic for 27688\n",
+      "Getting fresh statistic for 58828\n",
+      "Getting fresh statistic for 50508\n",
+      "Getting fresh statistic for 43425\n",
+      "Getting fresh statistic for 39073\n",
+      "Getting fresh statistic for 59738\n",
+      "Getting fresh statistic for 64743\n",
+      "Getting fresh statistic for 66252\n",
+      "Getting fresh statistic for 63050\n",
+      "Getting fresh statistic for 25946\n",
+      "Getting fresh statistic for 27561\n",
+      "Getting fresh statistic for 35052\n",
+      "Getting fresh statistic for 37653\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info('\\n******* STARTING UP ************')\n",
     "pv.batch_download(\n",
@@ -1309,24 +1318,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "astype() missing required argument 'dtype' (pos 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-58-a2043db50340>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimedelta64\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2019\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2019\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: astype() missing required argument 'dtype' (pos 1)"
-     ]
-    }
-   ],
    "source": [
-    "np.timedelta64(date(2019, 3, 1) - date(2019, 2, 1))."
+    "## OLD "
    ]
   },
   {
