--- a/examples/download_pv_timeseries.ipynb
+++ b/examples/download_pv_timeseries.ipynb
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,128 +1117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " system_id 26965: 2 of 2556 (0.078247%)NOT IMPLEMENTED YET!  USING _batch_download_using_get_status\n",
-      " system_id 66991: 3 of 2556 (0.117371%)NOT IMPLEMENTED YET!  USING _batch_download_using_get_status\n",
-      " system_id 11542: 4 of 2556 (0.156495%)NOT IMPLEMENTED YET!  USING _batch_download_using_get_status\n",
-      " system_id 14852: 12 of 2556 (0.469484%)"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "--- Logging error ---\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/logging/__init__.py\", line 1034, in emit\n",
-      "    msg = self.format(record)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/logging/__init__.py\", line 880, in format\n",
-      "    return fmt.format(record)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/logging/__init__.py\", line 619, in format\n",
-      "    record.message = record.getMessage()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/logging/__init__.py\", line 380, in getMessage\n",
-      "    msg = msg % self.args\n",
-      "ValueError: incomplete format\n",
-      "Call stack:\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/runpy.py\", line 193, in _run_module_as_main\n",
-      "    \"__main__\", mod_spec)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/runpy.py\", line 85, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
-      "    app.launch_new_instance()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/traitlets/config/application.py\", line 658, in launch_instance\n",
-      "    app.start()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/ipykernel/kernelapp.py\", line 563, in start\n",
-      "    self.io_loop.start()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/tornado/platform/asyncio.py\", line 148, in start\n",
-      "    self.asyncio_loop.run_forever()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/asyncio/base_events.py\", line 539, in run_forever\n",
-      "    self._run_once()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/asyncio/base_events.py\", line 1775, in _run_once\n",
-      "    handle._run()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/asyncio/events.py\", line 88, in _run\n",
-      "    self._context.run(self._callback, *self._args)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/tornado/ioloop.py\", line 690, in <lambda>\n",
-      "    lambda f: self._run_callback(functools.partial(callback, future))\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/tornado/ioloop.py\", line 743, in _run_callback\n",
-      "    ret = callback()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/tornado/gen.py\", line 787, in inner\n",
-      "    self.run()\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/tornado/gen.py\", line 748, in run\n",
-      "    yielded = self.gen.send(value)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/ipykernel/kernelbase.py\", line 365, in process_one\n",
-      "    yield gen.maybe_future(dispatch(*args))\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/tornado/gen.py\", line 209, in wrapper\n",
-      "    yielded = next(result)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/ipykernel/kernelbase.py\", line 272, in dispatch_shell\n",
-      "    yield gen.maybe_future(handler(stream, idents, msg))\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/tornado/gen.py\", line 209, in wrapper\n",
-      "    yielded = next(result)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/ipykernel/kernelbase.py\", line 542, in execute_request\n",
-      "    user_expressions, allow_stdin,\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/tornado/gen.py\", line 209, in wrapper\n",
-      "    yielded = next(result)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/ipykernel/ipkernel.py\", line 294, in do_execute\n",
-      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/ipykernel/zmqshell.py\", line 536, in run_cell\n",
-      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 2855, in run_cell\n",
-      "    raw_cell, store_history, silent, shell_futures)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 2881, in _run_cell\n",
-      "    return runner(coro)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/IPython/core/async_helpers.py\", line 68, in _pseudo_sync_runner\n",
-      "    coro.send(None)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 3058, in run_cell_async\n",
-      "    interactivity=interactivity, compiler=compiler, result=result)\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 3249, in run_ast_nodes\n",
-      "    if (await self.run_code(code, result,  async_=asy)):\n",
-      "  File \"/home/jack/miniconda3/envs/pvoutput/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 3326, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-17-6932e1778dc1>\", line 8, in <module>\n",
-      "    output_filename=OUTPUT_TIMESERIES_FILENAME)\n",
-      "  File \"/home/jack/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\", line 559, in batch_download\n",
-      "    min_data_availability)\n",
-      "  File \"/home/jack/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\", line 619, in _filter_date_range\n",
-      "    system_id, data_availability * 100)\n",
-      "Message: 'system_id %d: Data availability too low!  Only %.0f %.'\n",
-      "Arguments: (8162, 37.74625689519306)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " system_id 5116: 14 of 2556 (0.547731%)NOT IMPLEMENTED YET!  USING _batch_download_using_get_status\n",
+      " system_id 5116: 14 of 2556 (0.547731%))NOT IMPLEMENTED YET!  USING _batch_download_using_get_status\n",
       "PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-21 21:00:00+00:00\n",
-      "Waiting 1100 seconds.  Will retry at 2019-08-21 21:03:00+00:00\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRateLimitExceeded\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36m_api_query\u001b[0;34m(self, service, api_params, wait_if_rate_limit_exceeded, use_data_service)\u001b[0m\n\u001b[1;32m    701\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 702\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_process_api_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    703\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mRateLimitExceeded\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36m_process_api_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    816\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m403\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrate_limit_remaining\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 817\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRateLimitExceeded\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    818\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRateLimitExceeded\u001b[0m: Status code: 403; Response content: b'Forbidden 403: Exceeded 300 requests per hour'; Response headers: {'Date': 'Wed, 21 Aug 2019 20:44:39 GMT', 'Set-Cookie': 'JSESSIONID=l7iu5n6l0aek1lqg2jq1bphn5;Path=/', 'Expires': 'Thu, 01 Jan 1970 00:00:00 GMT', 'X-Rate-Limit-Remaining': '-1', 'X-Rate-Limit-Limit': '300', 'X-Rate-Limit-Reset': '1566421200', 'Content-Type': 'text/plain;charset=ISO-8859-1', 'Connection': 'close', 'Server': 'Jetty(7.6.17.v20150415)', 'Strict-Transport-Security': 'max-age=15768000'}; ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-6932e1778dc1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mstart_date\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSTART_DATE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mend_date\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mEND_DATE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         output_filename=OUTPUT_TIMESERIES_FILENAME)\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Exception! %s'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36mbatch_download\u001b[0;34m(self, system_ids, start_date, end_date, output_filename, timezone, min_data_availability)\u001b[0m\n\u001b[1;32m    569\u001b[0m                     \u001b[0mpv_system_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m                     \u001b[0mdate_ranges_to_download\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 571\u001b[0;31m                     timezone)\n\u001b[0m\u001b[1;32m    572\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    573\u001b[0m                 self._batch_download_using_get_status(\n",
-      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36m_batch_download_using_get_batch_status\u001b[0;34m(self, output_filename, pv_system_id, date_ranges_to_download, timezone)\u001b[0m\n\u001b[1;32m    634\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"NOT IMPLEMENTED YET!  USING _batch_download_using_get_status\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    635\u001b[0m         return self._batch_download_using_get_status(\n\u001b[0;32m--> 636\u001b[0;31m             output_filename, pv_system_id, date_ranges_to_download, timezone)\n\u001b[0m\u001b[1;32m    637\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    638\u001b[0m     def _batch_download_using_get_status(self,\n",
-      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36m_batch_download_using_get_status\u001b[0;34m(self, output_filename, pv_system_id, date_ranges_to_download, timezone)\u001b[0m\n\u001b[1;32m    648\u001b[0m                 timeseries = self.get_status(\n\u001b[1;32m    649\u001b[0m                     \u001b[0mpv_system_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate_to_load\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 650\u001b[0;31m                     wait_if_rate_limit_exceeded=True)\n\u001b[0m\u001b[1;32m    651\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mtimeseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    652\u001b[0m                     _append_missing_date(\n",
-      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36mget_status\u001b[0;34m(self, pv_system_id, date, **kwargs)\u001b[0m\n\u001b[1;32m    205\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m             pv_system_status_text = self._api_query(\n\u001b[0;32m--> 207\u001b[0;31m                 service='getstatus', api_params=api_params, **kwargs)\n\u001b[0m\u001b[1;32m    208\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mNoStatusFound\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    209\u001b[0m             _LOG.info(\n",
-      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36m_api_query\u001b[0;34m(self, service, api_params, wait_if_rate_limit_exceeded, use_data_service)\u001b[0m\n\u001b[1;32m    708\u001b[0m             \u001b[0m_print_and_log\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    709\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mwait_if_rate_limit_exceeded\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 710\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_for_rate_limit_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    711\u001b[0m                 return self._api_query(\n\u001b[1;32m    712\u001b[0m                     service, api_params, wait_if_rate_limit_exceeded=False)\n",
-      "\u001b[0;32m~/dev/python/openclimatefix/solar/pvoutput/pvoutput/pvoutput.py\u001b[0m in \u001b[0;36mwait_for_rate_limit_reset\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    836\u001b[0m         _print_and_log('Waiting {:.0f} seconds.  Will retry at {}'.format(\n\u001b[1;32m    837\u001b[0m             secs_to_wait, retry_time_utc))\n\u001b[0;32m--> 838\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msecs_to_wait\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    839\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    840\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Waiting 953 seconds.  Will retry at 2019-08-21 21:03:00+00:00\n"
      ]
     }
    ],
@@ -1254,15 +1142,6 @@
     "except Exception as e:\n",
     "    logger.exception('Exception! %s', e)\n",
     "    raise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'Only %.0f \\%.' %100"
    ]
   },
   {
