Implemented PVOutput._batch_download_use_get_batch_status
Closes #20

--- a/examples/download_pv_timeseries.ipynb
+++ b/examples/download_pv_timeseries.ipynb
@@ -36,13 +36,14 @@
    "source": [
     "BASE_PATH = os.path.expanduser('~/data/pvoutput.org/')\n",
     "\n",
-    "OUTPUT_TIMESERIES_FILENAME = os.path.join(BASE_PATH, 'UK_PV_timeseries.hdf')\n",
+    "# OUTPUT_TIMESERIES_FILENAME = os.path.join(BASE_PATH, 'UK_PV_timeseries.hdf')\n",
+    "OUTPUT_TIMESERIES_FILENAME = os.path.join(BASE_PATH, 'UK_PV_timeseries_batch.hdf')\n",
     "\n",
     "INPUT_PV_LIST_FILENAME = os.path.join(BASE_PATH, 'UK_PV_listing_metadata.hdf')\n",
     "METADATA_FILENAME = os.path.join(BASE_PATH, 'UK_PV_metadata.csv')\n",
     "PV_STATS_FILENAME = os.path.join(BASE_PATH, 'UK_PV_stats.csv')\n",
     "\n",
-    "START_DATE = pd.Timestamp(\"2019-01-01\")\n",
+    "START_DATE = pd.Timestamp(\"1950-01-01\")\n",
     "END_DATE = pd.Timestamp(\"2019-08-20\")\n",
     "\n",
     "logger = get_logger(stream_handler=False)"
@@ -1108,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,9 +1125,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " system_id 5116: 14 of 2556 (0.547731%))NOT IMPLEMENTED YET!  USING _batch_download_using_get_status\n",
-      "PVOutput.org API rate limit exceeded!  Rate limit will be reset at 2019-08-21 21:00:00+00:00\n",
-      "Waiting 953 seconds.  Will retry at 2019-08-21 21:03:00+00:00\n"
+      " system_id 24768: 0 of 2556 (0.000000%)Request accepted.\n",
+      "Sleeping for 1 minute.\n",
+      " system_id 26965: 2 of 2556 (0.078247%)Request accepted.\n",
+      "Sleeping for 1 minute.\n",
+      "Request accepted.\n",
+      "Sleeping for 1 minute.\n",
+      "Sleeping for 1 minute.\n"
      ]
     }
    ],
