Log missing date info

--- a/examples/download_pv_timeseries.ipynb
+++ b/examples/download_pv_timeseries.ipynb
@@ -1128,6 +1128,29 @@
       " system_id 24768: 1 of 2556 (0.039124%)\n",
       " system_id 35328: 2 of 2556 (0.078247%)\n",
       " system_id 26965: 3 of 2556 (0.117371%)\n",
+      " system_id 66991: 4 of 2556 (0.156495%)\n",
+      " system_id 11542: 5 of 2556 (0.195618%)\n",
+      "Request accepted.\n",
+      "Sleeping for 1 minute.\n",
+      "Request accepted.\n",
+      "Sleeping for 1 minute.\n",
+      " system_id 39098: 6 of 2556 (0.234742%)\n",
+      " system_id 35994: 7 of 2556 (0.273865%)\n",
+      " system_id 34273: 8 of 2556 (0.312989%)\n",
+      "Request accepted.\n",
+      "Sleeping for 1 minute.\n",
+      " system_id 8164: 9 of 2556 (0.352113%)\n",
+      "Request accepted.\n",
+      "Sleeping for 1 minute.\n",
+      "Request accepted.\n",
+      "Sleeping for 1 minute.\n",
+      " system_id 8500: 10 of 2556 (0.391236%)\n",
+      " system_id 8162: 11 of 2556 (0.430360%)\n",
+      " system_id 9091: 12 of 2556 (0.469484%)\n",
+      " system_id 14852: 13 of 2556 (0.508607%)\n",
+      " system_id 8163: 14 of 2556 (0.547731%)\n",
+      "Request accepted.\n",
+      "Sleeping for 1 minute.\n",
       "Request accepted.\n",
       "Sleeping for 1 minute.\n"
      ]
